<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5aa14f">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp">

        <ImageButton
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_row="0"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_row="0"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_row="0"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/four"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="1"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/five"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="1"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/six"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="1"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/seven"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/eight"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp" />

        <ImageButton
            android:id="@+id/nine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@android:color/background_dark"
            android:scaleType="fitXY"
            android:text=""
            android:textColor="#000"
            android:textSize="56sp"
            tools:ignore="RtlHardcoded" />

    </GridLayout>

    <TextView
        android:id="@+id/name_of_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#ffff"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/Resume"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:onClick="onClickResume"
        android:text="Resume"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Resume"
        android:layout_marginTop="-80dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:layout_marginBottom="-100dp"
        android:text="@string/score"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/Resume"
        android:layout_marginStart="17dp"
        android:onClick="onClickReset"
        android:text="@string/reset" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button"
        android:layout_marginEnd="36dp"
        android:onClick="onClickPause"
        android:text="@string/pause" />

    <TextView
        android:id="@+id/missBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout"
        android:layout_alignEnd="@+id/pause"
        android:layout_marginBottom="-100dp"
        android:text="@string/miss"
        android:textSize="24sp" />


</RelativeLayout>
